--- a/backend/.env
+++ b/backend/.env
@@ -7,8 +7,8 @@ TYPEORM_MIGRATIONS=./src/migrations/*.ts
 
 #Things you can change if you wish...
 TYPEORM_HOST=${TYPEORM_HOST}
-TYPEORM_PORT=5432
-TYPEORM_USERNAME=postgres
+TYPEORM_PORT=${TYPEORM_PORT}
+TYPEORM_USERNAME=${TYPEORM_USERNAME}
 TYPEORM_PASSWORD=${TYPEORM_PASSWORD}
-TYPEORM_DATABASE=glee
+TYPEORM_DATABASE=${TYPEORM_DATABASE}
 
