--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -238,12 +238,9 @@ jobs:
       - run:
           name: Run migrations
           command: |
-            ls -la 
             cd backend
-            ls -la
-            cat .env
             npm install
-            npm run migrations 
+            npm run migrations > migration.txt
          
 
       - run:
@@ -258,40 +255,6 @@ jobs:
       - destroy-environment
       - revert-migrations    
 
-
-  # run-migrations:
-  #   docker:
-  #     - image: cimg/node:14.20
-  #   steps:
-  #     - checkout
-  #     - run:
-  #         name: awscli install
-  #         command: |
-  #           sudo apt-get -y -qq update
-  #           sudo apt-get -qq install awscli
-  #           sudo apt-get -y -qq install python3
-
-  #     - run:
-  #         name: Run migrations
-  #         command: |
-  #           cd backend
-  #           npm install
-  #           npm run build
-  #           # npm audit fix --audit-level=critical --force
-  #           echo "_____________________ Step Ended ____________________________________"
-  #           touch migration_dump.txt
-  #           npm run migrations >> migrations_dump.txt 
-  #           cat migrations_dump.txt   
-             
-  #     - run:
-  #         name: Send migration status to kvdb.io
-  #         command: |
-  #           if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
-  #           then
-  #             curl https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
-  #           fi
-  #     - destroy-environment
-  #     - revert-migrations     
 
   deploy-frontend:
     docker:
@@ -443,7 +406,7 @@ workflows:
       #         only: [master]
       # - configure-infrastructure:
       #     requires: [deploy-infrastructure]
-      - run-migrations
+      #- run-migrations
           # requires: [configure-infrastructure]
       # - deploy-frontend:
       #     requires: [run-migrations]
