--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -240,7 +240,7 @@ jobs:
           command: |
             cd backend
             npm install
-            npm run migrations > migration.txt
+            npm run migrations > migrationS.txt
          
 
       - run:
