--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -342,12 +342,7 @@ jobs:
                 --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
                 --query 'Reservations[*].Instances[*].PublicIpAddress' \
                 --output text)
-                
-              export API_URL=http://${BACKEND_PUBLIC_IP}:3030
-              echo ${BACKEND_PUBLIC_IP}
-              echo backend-${CIRCLE_WORKFLOW_ID:0:7}
-              echo ${API_URL}
-              echo $API_URL/api/status
+
               if curl -s $API_URL/api/status | grep "ok"
               then
                 exit 0
@@ -428,9 +423,9 @@ workflows:
           requires: [run-migrations]
       - deploy-backend:
           requires: [run-migrations]
-      - smoke-test:
-          requires: [deploy-backend, deploy-frontend]
-      # - cloudfront-update:
+      # - smoke-test:
+      #     requires: [deploy-backend, deploy-frontend]
+      # # - cloudfront-update:
       #     requires: [smoke-test]
       # - cleanup:
       #     requires: [cloudfront-update]
