--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -290,7 +290,7 @@ jobs:
       - revert-migrations
       
                     
-  deploy-backend:
+ deploy-backend:
     docker:
       - image: cimg/python:3.10
     steps:
@@ -298,12 +298,14 @@ jobs:
       - install_awscli
       - install_ansible
       - install_nodejs
-      - add_ssh_keys:
-        fingerprints: ["18:7c:4d:61:15:27:d5:d4:e8:40:00:21:48:f0:36:73"]
       - restore_cache:
           keys: [backend-deps]
+      - add_ssh_keys:
+          fingerprints: ["18:7c:4d:61:15:27:d5:d4:e8:40:00:21:48:f0:36:73"] 
       - attach_workspace:
           at: ~/
+      - restore_cache:
+          keys: [backend-deps]
       - run:
           name: Package Backend
           command: |
@@ -332,6 +334,7 @@ jobs:
             ansible-playbook -i inventory.txt deploy-backend.yml
       - destroy-environment
       - revert-migrations
+
   smoke-test:
       docker:
         - image: cimg/base:stable
