--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -333,45 +333,45 @@ jobs:
       - destroy-environment
       - revert-migrations
 
-  # smoke-test:
-  #     docker:
-  #       - image: cimg/base:stable
-  #     steps:
-  #       - checkout
-  #       - install_awscli
-  #       - install_nodejs
-  #       - run:
-  #           name: Backend smoke test.
-  #           command: |
-  #             BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
-  #               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-  #               --query 'Reservations[*].Instances[*].PublicIpAddress' \
-  #               --output text)
+  smoke-test:
+      docker:
+        - image: cimg/base:stable
+      steps:
+        - checkout
+        - install_awscli
+        - install_nodejs
+        - run:
+            name: Backend smoke test.
+            command: |
+              BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
+                --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+                --query 'Reservations[*].Instances[*].PublicIpAddress' \
+                --output text)
 
-  #             export API_URL=http://${BACKEND_PUBLIC_IP}:3030
-  #             echo ${BACKEND_PUBLIC_IP}
-  #             echo backend-${CIRCLE_WORKFLOW_ID:0:7}
-  #             echo ${API_URL}
-  #             echo $API_URL/api/status
+              export API_URL=http://${BACKEND_PUBLIC_IP}:3030
+              echo ${BACKEND_PUBLIC_IP}
+              echo backend-${CIRCLE_WORKFLOW_ID:0:7}
+              echo ${API_URL}
+              echo $API_URL/api/status
 
-  #             if curl -s $API_URL/api/status | grep "ok"
-  #             then
-  #               exit 0
-  #             else
-  #               exit 1
-  #             fi
-  #       - run:
-  #           name: Frontend smoke test.
-  #           command: |
-  #             FRONTEND_WEBSITE=http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website.${AWS_DEFAULT_REGION}.amazonaws.com
-  #             if curl -s $FRONTEND_WEBSITE | grep "Welcome"
-  #             then
-  #               exit 0
-  #             else
-  #               exit 1
-  #             fi
-  #       - destroy-environment
-  #       - revert-migrations
+              if curl -s $API_URL/api/status | grep "ok"
+              then
+                exit 0
+              else
+                exit 1
+              fi
+        - run:
+            name: Frontend smoke test.
+            command: |
+              FRONTEND_WEBSITE=http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website.${AWS_DEFAULT_REGION}.amazonaws.com
+              if curl -s $FRONTEND_WEBSITE | grep "Welcome"
+              then
+                exit 0
+              else
+                exit 1
+              fi
+        - destroy-environment
+        - revert-migrations
 
 
 #   cloudfront-update:
@@ -412,31 +412,31 @@ jobs:
 workflows:
   default:
     jobs:
-      - build-frontend
-      - build-backend
-      - test-frontend:
-          requires: [build-frontend] 
-      - test-backend:
-          requires: [build-backend]
-      - scan-backend:
-          requires: [build-backend]
-      - scan-frontend:
-          requires: [build-frontend]
-      - deploy-infrastructure:
-          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-          filters:
-            branches:
-              only: [master]
-      - configure-infrastructure:
-          requires: [deploy-infrastructure]
-      - run-migrations:
-          requires: [configure-infrastructure]
-      - deploy-frontend:
-          requires: [run-migrations]
-      - deploy-backend:
-           requires: [run-migrations]
-      # - smoke-test:
-      #     requires: [deploy-backend, deploy-frontend]
+      # - build-frontend
+      # - build-backend
+      # - test-frontend:
+      #     requires: [build-frontend] 
+      # - test-backend:
+      #     requires: [build-backend]
+      # - scan-backend:
+      #     requires: [build-backend]
+      # - scan-frontend:
+      #     requires: [build-frontend]
+      # - deploy-infrastructure:
+      #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+      #     filters:
+      #       branches:
+      #         only: [master]
+      # - configure-infrastructure:
+      #     requires: [deploy-infrastructure]
+      # - run-migrations:
+      #     requires: [configure-infrastructure]
+      # - deploy-frontend:
+      #     requires: [run-migrations]
+      # - deploy-backend:
+      #      requires: [run-migrations]
+      - smoke-test
+          # requires: [deploy-backend, deploy-frontend]
       # # - cloudfront-update:
       #     requires: [smoke-test]
       # - cleanup:
