--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -373,22 +373,37 @@ jobs:
       - destroy-environment
       - revert-migrations
 
-#run till smoke
-#   cloudfront-update:
-#     docker:
-#       # Docker image here that supports AWS CLI
-#     steps:
-#       # Checkout code from git
-#       - run:
+  cloudfront-update:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - install_awscli
+      - install_nodejs
+      - run:
+          name: Get old WorkflowID and persist it
+          command: |
+            aws cloudformation list-exports \
+              --query "Exports[?Name==\`WorkflowID\`].Value" \
+              --no-paginate --output text >> ~/project/oldWorkflowID.txt
+              
+            cat ~/project/oldWorkflowID.txt
+      - run:
+          name: Update cloudfront distribution
+          command: |
+            aws cloudformation deploy \
+              --template-file .circleci/files/cloudfront.yml \
+              --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
+              --stack-name InitialStack
 
-#           name: Install dependencies
-#           command: |
-#             # your code here
-#       - run:
-#           name: Update cloudfront distribution
-#           command: |
-#             # your code here
-#       # Here's where you will add some code to rollback on failure  
+            echo Current Workflow ID: "${CIRCLE_WORKFLOW_ID:0:7}"
+            cat ~/project/oldWorkflowID.txt
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - project/oldWorkflowID.txt
+      - destroy-environment
+      - revert-migrations 
 
 # cleanup:
 #     docker:
