--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -405,25 +405,37 @@ jobs:
       - destroy-environment
       - revert-migrations 
 
-# cleanup:
-#     docker:
-#       # Docker image here
-#     steps:
-#       # Checkout code from git
-#       - run:
-#           name: Get old stack workflow id
-#           command: |
-#             # your code here
-#             export OldWorkflowID="the id here"
-#             export STACKS=[] #put the list of stacks here
-#       - run:
-#           name: Remove old stacks and files
-#           command: |
-#             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
-#             then
-#               # your code here
-#             fi
-#         
+  cleanup:
+    docker:
+    - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Install dependency
+          command: yum install -y gzip
+            yum install -y tar
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Destroy the previous S3 bucket and CloudFormation stack.
+          command: |
+            export oldWorkflowID=$(cat ~/project/oldWorkflowID.txt)
+            echo OldWorkflowID: "${oldWorkflowID}"
+            echo CIRCLE_WORKFLOW_ID: "${CIRCLE_WORKFLOW_ID:0:7}"
+            # Fetch the stack names          
+            export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+              --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
+            echo Stack names: "${STACKS[@]}"
+            if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${oldWorkflowID}" ]]
+            then
+              echo "-------------------- Start Cleanup: Deleting S3 & its stack in progress ----------------"
+              aws s3 rm "s3://udapeople-${oldWorkflowID}" --recursive
+              aws cloudformation delete-stack --stack-name "udapeople-backend-${oldWorkflowID}"
+              aws cloudformation delete-stack --stack-name "udapeople-frontend-${oldWorkflowID}"
+              echo "-------------------- [DELETED CONFIRMED!] ------------------------"              
+            else
+              echo "-------------------- CLEANUP FAILED! --------------------"
+            fi      
 workflows:
   default:
     jobs:
