--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -155,7 +155,6 @@ jobs:
              cd frontend
              npm install
              npm audit fix --force --audit-level=critical
-             npm audit fix --force --audit-level=critical
              npm audit --audit-level=critical
     
   scan-backend:
@@ -173,6 +172,7 @@ jobs:
              npm audit fix --force --audit-level=critical
              npm audit fix --force --audit-level=critical
              npm audit --audit-level=critical
+             
     
   deploy-infrastructure:
     docker:
@@ -464,7 +464,7 @@ workflows:
            requires: [run-migrations]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
-      # - cloudfront-update:
-      #     requires: [smoke-test]
+      - cloudfront-update:
+          requires: [smoke-test]
       # - cleanup:
       #     requires: [cloudfront-update]
